refacotor: gather pet tags within the service
